[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/enemis/Skeleton2/Take Hit.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemis/Skeleton2/Walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemis/Skeleton2/Death.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemis/Skeleton2/Idle.png" type="Texture" id=4]
[ext_resource path="res://Scrpits/enemy1.gd" type="Script" id=5]
[ext_resource path="res://Assets/enemis/Skeleton2/Attack.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 6 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "hit",
"speed": 12.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "idel",
"speed": 12.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "kick",
"speed": 7.0
}, {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 8.36233, 15.4936 )

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 9.28929, 3.88494 )

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 0, -8 )
scale = Vector2( 1.29181, 1.76 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.814215, 0.522727 )
frames = SubResource( 58 )
animation = "idel"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.3571, 3.26704 )
scale = Vector2( 0.891322, 0.650928 )
shape = SubResource( 71 )

[node name="DownRay" type="RayCast2D" parent="."]
position = Vector2( 14.708, 4.76837e-07 )
enabled = true
cast_to = Vector2( 0, 21.0227 )

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 14.708, 4.54545 )
scale = Vector2( 1, 0.818182 )
enabled = true
cast_to = Vector2( 15.4822, 9.53674e-07 )
collision_mask = 3

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 26.3197, 9.65909 )
scale = Vector2( 1, 1 )
shape = SubResource( 70 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
